# sportsacademy

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260426_0001_initial.py  20260426_0002_add_student_skills.py
backend/app/auth/: dependencies.py  security.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  admission.py  enums.py  fee_plan.py  payment.py  payment_notification.py  student_profile.py  user.py
backend/app/repositories/: notification_repository.py  payment_repository.py  student_repository.py  user_repository.py
backend/app/routers/: admin.py  auth.py  student.py
backend/app/schemas/: admin.py  auth.py  common.py  student.py
backend/app/services/: admin_service.py  auth_service.py  student_service.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_health.py  test_student.py
frontend/: package-lock.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/Components/Admin/: AdminLayout.jsx  Dashboard.jsx  Sidebar.jsx
frontend/src/Components/AdminPage/: boardcast.jsx
frontend/src/Components/RegisterationPage/: Registeration.jsx
sportsacademy/: package-lock.json  tailwind.config.js
sportsacademy/src/: globals.css
src/: App.jsx  globals.css
src/Components/: Home.jsx
src/Components/Admin/: AdminLayout.jsx  Dashboard.jsx  Sidebar.jsx
src/Components/Login Page/: LoginPage.jsx
(+7 files in other folders)
