[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"alembic>=1.16.0",
	"asyncpg>=0.30.0",
	"bcrypt>=3.2.0,<4",
	"fastapi>=0.115.0",
	"passlib[bcrypt]>=1.7.4",
	"psycopg[binary]>=3.2.0",
	"pydantic-settings>=2.10.0",
	"python-jose[cryptography]>=3.5.0",
	"python-multipart>=0.0.20",
	"sqlalchemy>=2.0.40",
	"uvicorn[standard]>=0.34.0",
]

[tool.alembic]
script_location = "alembic"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
